--- a/src/component/feed/feed.css
+++ b/src/component/feed/feed.css
@@ -1,6 +1,3 @@
 .feeder{
-    @apply flex flex-row flex-wrap relative mt-16 w-full h-screen;
-
-    left: 15%;
-
+    @apply flex flex-row flex-wrap relative mt-16 w-full h-screen box-border ml-10;
 }
