--- a/src/component/category/leftside.css
+++ b/src/component/category/leftside.css
@@ -1,11 +1,12 @@
 .leftside{
     @apply  flex flex-col relative w-1/5 mt-16 ml-10 h-80 justify-around border-gray-300 rounded-lg 
-    border-solid border-2 ;
+    border-solid border-2 shadow-2xl mob:w-auto mob:ml-1 mob:mt-16 mob:gap-0.5 mob:justify-start mob:h-52;
 
     
 }
 
 .category{
     @apply flex rounded relative border-cyan-700 h-10 w-11/12 inset-x-1 text-white cursor-pointer bg-slate-400
-    hover:border-blue-500 hover:bg-orange-400 justify-center items-center mt-5 hover:transition-all;
+    hover:border-blue-500 hover:bg-orange-400 justify-center items-center mt-5 hover:transition-all 
+    mob:justify-center mob:mt-2 ;
 }
