--- a/src/component/feed/feed.css
+++ b/src/component/feed/feed.css
@@ -1,3 +1,3 @@
 .feeder{
-    @apply flex flex-row flex-wrap relative mt-16 w-full h-screen box-border ml-10;
+    @apply flex flex-row flex-wrap relative mt-16 w-full h-screen box-border ml-10 mob:w-auto;
 }
